--- a/package.json
+++ b/package.json
@@ -101,7 +101,6 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
-    "@serverless-devs/core": "^0.1.36",
-    "fs-extra": "^10.0.1"
+    "@serverless-devs/core": "^0.1.37-beta.1"
   }
 }
