--- a/package.json
+++ b/package.json
@@ -182,7 +182,8 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
-    "@serverless-devs/core": "^0.1.37-beta.1",
-    "@vscode/webview-ui-toolkit": "^1.0.0"
+    "@serverless-devs/core": "beta",
+    "@vscode/webview-ui-toolkit": "^1.0.0",
+    "art-template": "^4.13.2"
   }
 }
