--- a/package.json
+++ b/package.json
@@ -198,6 +198,7 @@
   },
   "dependencies": {
     "@serverless-devs/core": "beta",
+    "@vscode/codicons": "^0.0.30",
     "@vscode/webview-ui-toolkit": "^1.0.0"
   }
 }
