feat: 🎸 autoMark 放在 local-resource tree 里

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
       "explorer": [
         {
           "id": "local-resource",
-          "name": "Serverless Devs"
+          "name": "Serverless-Devs"
         }
       ]
     },
