--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "viewsWelcome": [
       {
         "view": "quick-start",
-        "contents": "快速开始你的Serverless之旅\n[添加一组密钥信息](command:serverless-devs.config)\n[创建一个应用](command:serverless-devs.init)\n除此之外，您可以可以快速通过[快速上手](https://docs.serverless-devs.com/serverless-devs/quick_start)进行更多的图文案例的参考和学习。"
+        "contents": "快速开始你的Serverless之旅\n[密钥管理](command:serverless-devs.config)\n[创建一个应用](command:serverless-devs.init)\n除此之外，您可以可以快速通过[快速上手](https://docs.serverless-devs.com/serverless-devs/quick_start)进行更多的图文案例的参考和学习。"
       },
       {
         "view": "dev-docs",
