--- a/package.json
+++ b/package.json
@@ -249,17 +249,7 @@
           "group": "navigation@7"
         }
       ],
-      "editor/title/context": [
-        {
-          "command": "serverless-devs.deploy",
-          "group": "navigation"
-        }
-      ],
       "explorer/context": [
-        {
-          "command": "serverless-devs.deploy",
-          "group": "navigation"
-        },
         {
           "command": "serverless-devs.yaml",
           "when": "resourceExtname == .yaml || resourceExtname == .yml",
@@ -333,7 +323,6 @@
     "@serverless-devs/core": "latest",
     "@vscode/codicons": "^0.0.30",
     "@vscode/webview-ui-toolkit": "^1.0.0",
-    "open": "^8.4.0",
-    "react": "^18.2.0"
+    "open": "^8.4.0"
   }
 }
