feat🎸: 完善创建应用, 改进过去功能

--- a/package.json
+++ b/package.json
@@ -335,6 +335,7 @@
     "@vscode/webview-ui-toolkit": "^1.0.0",
     "art-template": "^4.13.2",
     "node-fetch": "^2.6.7",
-    "open": "^8.4.0"
+    "open": "^8.4.0",
+    "qs": "^6.11.0"
   }
 }
