feat 🎸: 修改活动区和webview的logo

--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
         {
           "id": "Serverless-Devs-explorer",
           "title": "Serverless-Devs",
-          "icon": "media/dep.svg"
+          "icon": "media/logo.png"
         }
       ]
     },
