--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "displayName": "serverless-devs",
   "description": "Serverless-Devs extension. Lets you develop your serverless application within VSCode.",
   "repository": "https://github.com/Serverless-Devs/serverless-devs-vscode-plugin",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "engines": {
     "vscode": "^1.65.0"
   },
@@ -48,7 +48,7 @@
         {
           "id": "Serverless-Devs-explorer",
           "title": "Serverless-Devs",
-          "icon": "media/dep.svg"
+          "icon": "media/sidebar-logo.svg"
         }
       ]
     },
