随机后缀名

--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
         {
           "id": "Serverless-Devs-explorer",
           "title": "Serverless-Devs",
-          "icon": "media/logo.png"
+          "icon": "media/sidebar-logo.svg"
         }
       ]
     },
