--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "onCommand:serverless-devs.init",
     "onCommand:serverless-devs.config",
     "onCommand:serverless-devs.set",
+    "onCommand:serverless-devs.install",
     "onCommand:create.pick"
   ],
   "contributes": {
     "views": {
-      "Serverless-Devs-explorer": [
-        {
+      "Serverless-Devs-explorer": [{
           "id": "quick-start",
           "name": "快速开始"
         },
@@ -35,24 +35,19 @@
           "name": "更多"
         }
       ],
-      "explorer": [
-        {
-          "id": "local-resource",
-          "name": "Serverless-Devs"
-        }
-      ]
+      "explorer": [{
+        "id": "local-resource",
+        "name": "Serverless-Devs"
+      }]
     },
     "viewsContainers": {
-      "activitybar": [
-        {
-          "id": "Serverless-Devs-explorer",
-          "title": "Serverless-Devs",
-          "icon": "media/sidebar-logo.svg"
-        }
-      ]
+      "activitybar": [{
+        "id": "Serverless-Devs-explorer",
+        "title": "Serverless-Devs",
+        "icon": "media/sidebar-logo.svg"
+      }]
     },
-    "viewsWelcome": [
-      {
+    "viewsWelcome": [{
         "view": "quick-start",
         "contents": "快速开始你的Serverless之旅\n[密钥管理](command:serverless-devs.config)\n[创建一个应用](command:create.pick)\n除此之外，您可以可以快速通过[快速上手](https://docs.serverless-devs.com/serverless-devs/quick_start)进行更多的图文案例的参考和学习。"
       },
@@ -63,10 +58,13 @@
       {
         "view": "learn-more",
         "contents": "您在使用当前工具的时候，遇到任何问题都可以在[Github Issues](https://github.com/Serverless-Devs/Serverless-Devs/issues)上面找到我们，也欢迎您和我们一起共建该项目。\n[访问代码仓库](https://github.com/Serverless-Devs/Serverless-Devs)"
+      },
+      {
+        "view": "local-resource",
+        "contents": "您正确安装了serverless-devs命令行工具吗？该部分的功能依赖此工具，建议您安装后体验。\n[立即安装](command:serverless-devs.install)"
       }
     ],
-    "commands": [
-      {
+    "commands": [{
         "command": "create.pick",
         "title": "Choose how to create app"
       },
@@ -220,15 +218,12 @@
       }
     ],
     "menus": {
-      "editor/context": [
-        {
-          "when": "editorFocus",
-          "command": "serverless-devs.deploy",
-          "group": "navigation"
-        }
-      ],
-      "editor/title": [
-        {
+      "editor/context": [{
+        "when": "editorFocus",
+        "command": "serverless-devs.deploy",
+        "group": "navigation"
+      }],
+      "editor/title": [{
           "command": "serverless-devs.verify",
           "when": "resourceExtname == .yaml || resourceExtname == .yml",
           "group": "navigation@1"
@@ -259,15 +254,12 @@
           "group": "navigation@7"
         }
       ],
-      "explorer/context": [
-        {
-          "command": "serverless-devs.yaml",
-          "when": "resourceExtname == .yaml || resourceExtname == .yml",
-          "group": "navigation"
-        }
-      ],
-      "view/title": [
-        {
+      "explorer/context": [{
+        "command": "serverless-devs.yaml",
+        "when": "resourceExtname == .yaml || resourceExtname == .yml",
+        "group": "navigation"
+      }],
+      "view/title": [{
           "command": "serverless-devs.init",
           "group": "navigation@1",
           "when": "view == quick-start"
@@ -283,8 +275,7 @@
           "group": "navigation"
         }
       ],
-      "view/item/context": [
-        {
+      "view/item/context": [{
           "command": "local-resource.deploy",
           "when": "view == local-resource",
           "group": "inline@1"
@@ -334,6 +325,7 @@
     "@vscode/codicons": "^0.0.30",
     "@vscode/webview-ui-toolkit": "^1.0.0",
     "art-template": "^4.13.2",
+    "command-exists": "^1.2.9",
     "node-fetch": "^2.6.7",
     "open": "^8.4.0",
     "qs": "^6.11.0"
