--- a/package.json
+++ b/package.json
@@ -320,8 +320,7 @@
     "eslint": "^8.11.0",
     "glob": "^7.2.0",
     "mocha": "^9.2.2",
-    "typescript": "^4.5.5",
-    "react": "^18.2.0"
+    "typescript": "^4.5.5"
   },
   "dependencies": {
     "@serverless-devs/core": "latest",
