fix: 🐛 修复当编辑器处于无项目状态时抛出找不到路径错误

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
       ],
       "explorer": [{
         "id": "local-resource",
+        "when": "resource == true",
         "name": "Serverless-Devs"
       }]
     },
