feat :🎸 改成集成redhat yaml插件实现原有自动完成功能，新增通用基础Schema

--- a/package.json
+++ b/package.json
@@ -333,5 +333,8 @@
     "node-fetch": "^2.6.7",
     "open": "^8.4.0",
     "qs": "^6.11.0"
-  }
+  },
+  "extensionDependencies": [
+    "redhat.vscode-yaml"
+  ]
 }
