--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "displayName": "serverless-devs",
   "description": "Serverless-Devs extension. Lets you develop your serverless application within VSCode.",
   "repository": "https://github.com/Serverless-Devs/serverless-devs-vscode-plugin",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "engines": {
     "vscode": "^1.65.0"
   },
@@ -24,7 +24,8 @@
   ],
   "contributes": {
     "views": {
-      "Serverless-Devs-explorer": [{
+      "Serverless-Devs-explorer": [
+        {
           "id": "quick-start",
           "name": "快速开始"
         },
@@ -37,11 +38,13 @@
           "name": "更多"
         }
       ],
-      "explorer": [{
-        "id": "local-resource",
-        "when": "resource == true",
-        "name": "Serverless-Devs"
-      }]
+      "explorer": [
+        {
+          "id": "local-resource",
+          "when": "resource == true",
+          "name": "Serverless-Devs"
+        }
+      ]
     },
     "viewsContainers": {
       "activitybar": [
@@ -52,7 +55,8 @@
         }
       ]
     },
-    "viewsWelcome": [{
+    "viewsWelcome": [
+      {
         "view": "quick-start",
         "contents": "快速开始你的Serverless之旅\n[密钥管理](command:serverless-devs.config)\n[创建一个应用](command:create.pick)\n[组件管理](command:serverless-devs.component)\n除此之外，您可以可以快速通过[快速上手](https://docs.serverless-devs.com/serverless-devs/quick_start)进行更多的图文案例的参考和学习。"
       },
@@ -69,7 +73,8 @@
         "contents": "您正确安装了serverless-devs命令行工具吗？该部分的功能依赖此工具，建议您安装后体验。\n[立即安装](command:serverless-devs.install)\n如果您以安装仍然出现此提示，说明该目录并不存在s.yaml文件"
       }
     ],
-    "commands": [{
+    "commands": [
+      {
         "command": "create.pick",
         "title": "Choose how to create app"
       },
@@ -223,12 +228,15 @@
       }
     ],
     "menus": {
-      "editor/context": [{
-        "when": "editorFocus",
-        "command": "serverless-devs.deploy",
-        "group": "navigation"
-      }],
-      "editor/title": [{
+      "editor/context": [
+        {
+          "when": "editorFocus",
+          "command": "serverless-devs.deploy",
+          "group": "navigation"
+        }
+      ],
+      "editor/title": [
+        {
           "command": "serverless-devs.verify",
           "when": "resourceExtname == .yaml || resourceExtname == .yml",
           "group": "navigation@1"
@@ -259,7 +267,8 @@
           "group": "navigation@7"
         }
       ],
-      "explorer/context": [{
+      "explorer/context": [
+        {
           "command": "serverless-devs.yaml",
           "when": "resourceExtname == .yaml || resourceExtname == .yml",
           "group": "navigation@0"
@@ -280,7 +289,8 @@
           "group": "navigation"
         }
       ],
-      "view/title": [{
+      "view/title": [
+        {
           "command": "serverless-devs.init",
           "group": "navigation@1",
           "when": "view == quick-start"
@@ -296,7 +306,8 @@
           "group": "navigation"
         }
       ],
-      "view/item/context": [{
+      "view/item/context": [
+        {
           "command": "local-resource.deploy",
           "when": "view == local-resource",
           "group": "inline@1"
