--- a/package.json
+++ b/package.json
@@ -336,7 +336,9 @@
     "watch": "tsc -watch -p ./",
     "pretest": "npm run compile && npm run lint",
     "lint": "eslint src --ext ts",
-    "test": "node ./out/test/runTest.js"
+    "test": "node ./out/test/runTest.js",
+    "format": "prettier --write src/**/*.ts",
+    "format-check": "prettier --check src/**/*.ts"
   },
   "devDependencies": {
     "@types/glob": "^7.2.0",
@@ -350,6 +352,7 @@
     "eslint": "^8.11.0",
     "glob": "^7.2.0",
     "mocha": "^9.2.2",
+    "prettier": "^2.8.4",
     "typescript": "^4.5.5"
   },
   "dependencies": {
