--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,13 @@
 {
 	"compilerOptions": {
-		"allowSyntheticDefaultImports": true,
-		"module": "commonjs",
-		"target": "ES2020",
-		"outDir": "out",
-		"lib": [
-			"ES2020"
-		],
-		"sourceMap": true,
-		"rootDir": "src",
-		"strict": false   /* enable all strict type-checking options */
-		/* Additional Checks */
-		// "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
-		// "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
-		// "noUnusedParameters": true,  /* Report errors on unused parameters. */
-	}
-}
+	  "module": "commonjs",
+	  "target": "es6",
+	  "outDir": "out",
+	  "lib": ["es6", "dom"],
+	  "sourceMap": true,
+	  "rootDir": "src",
+	  "strict": true
+	},
+	"exclude": ["node_modules", ".vscode-test", "webview-ui"]
+  }
+  
