--- a/webview-ui/package.json
+++ b/webview-ui/package.json
@@ -135,5 +135,9 @@
     "presets": [
       "react-app"
     ]
+  },
+  "devDependencies": {
+    "less": "^4.1.3",
+    "less-loader": "^11.1.0"
   }
 }
