--- a/webview-ui/package.json
+++ b/webview-ui/package.json
@@ -11,8 +11,6 @@
     "@types/node": "^16.18.12",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
-    "@types/vscode-webview": "^1.57.1",
-    "@vscode/webview-ui-toolkit": "^1.2.1",
     "babel-jest": "^27.4.2",
     "babel-loader": "^8.2.3",
     "babel-plugin-named-asset-import": "^0.3.8",
@@ -144,5 +142,6 @@
   "devDependencies": {
     "less": "^4.1.3",
     "less-loader": "^11.1.0"
-  }
+  },
+  "repository": "git@github.com:xsahxl/serverless-devs-vscode-plugin.git"
 }
