--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
 	  "lib": ["es6", "dom"],
 	  "sourceMap": true,
 	  "rootDir": "src",
-	  "strict": true
+	  "strict": true,
+	  "noImplicitAny":false
 	},
 	"exclude": ["node_modules", ".vscode-test", "webview-ui"]
   }
