feat: react add alias
Signed-off-by: xsahxl <xsahxl@126.com>

--- a/webview-ui/tsconfig.json
+++ b/webview-ui/tsconfig.json
@@ -20,6 +20,10 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "noImplicitAny": false,
+    "baseUrl": "./",
+    "paths": {
+      "@/*": ["src/*"]
+    }
   },
   "include": [
     "src"
