--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "viewsWelcome": [
       {
         "view": "quick-start",
-        "contents": "快速开始你的Serverless之旅\n[密钥管理](command:serverless-devs.config)\n[创建一个应用](command:create.pick)\n[组件管理](command:serverless-devs.component)\n除此之外，您可以可以快速通过[快速上手](https://docs.serverless-devs.com/serverless-devs/quick_start)进行更多的图文案例的参考和学习。"
+        "contents": "快速开始你的Serverless之旅\n[密钥管理](command:serverless-devs.access)\n[创建一个应用](command:create.pick)\n[组件管理](command:serverless-devs.component)\n除此之外，您可以可以快速通过[快速上手](https://docs.serverless-devs.com/serverless-devs/quick_start)进行更多的图文案例的参考和学习。"
       },
       {
         "view": "dev-docs",
@@ -74,7 +74,7 @@
         "title": "Choose how to create app"
       },
       {
-        "command": "serverless-devs.config",
+        "command": "serverless-devs.access",
         "title": "Add Account",
         "category": "Serverless-Devs"
       },
@@ -361,6 +361,7 @@
     "command-exists": "^1.2.9",
     "node-fetch": "^2.6.7",
     "open": "^8.4.0",
-    "qs": "^6.11.0"
+    "qs": "^6.11.0",
+    "rimraf": "^4.4.1"
   }
 }
