--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "displayName": "serverless-devs",
   "description": "Serverless-Devs extension. Lets you develop your serverless application within VSCode.",
   "repository": "https://github.com/Serverless-Devs/serverless-devs-vscode-plugin",
-  "version": "0.0.9",
+  "version": "0.0.12",
   "engines": {
     "vscode": "^1.65.0"
   },
@@ -18,15 +18,15 @@
       "Serverless-Devs-explorer": [
         {
           "id": "quick-start",
-          "name": "快速开始"
+          "name": "%vscode.quick.start%"
         },
         {
           "id": "dev-docs",
-          "name": "开发必读"
+          "name": "%vscode.a.must-read.for.development%"
         },
         {
           "id": "learn-more",
-          "name": "更多"
+          "name": "%vscode.more%"
         }
       ],
       "explorer": [
@@ -49,29 +49,25 @@
     "viewsWelcome": [
       {
         "view": "quick-start",
-        "contents": "快速开始你的Serverless之旅\n[密钥管理](command:serverless-devs.access)\n[创建一个应用](command:create.pick)\n[组件管理](command:serverless-devs.component)\n除此之外，您可以可以快速通过[快速上手](https://docs.serverless-devs.com/serverless-devs/quick_start)进行更多的图文案例的参考和学习。"
+        "contents": "%vscode.quick.start.welcome.contents%"
       },
       {
         "view": "dev-docs",
-        "contents": "您可以在使用该插件之前，查看[帮助文档](https://docs.serverless-devs.com/serverless-devs/readme)，以便对Serverless-Devs和本插件有更深入的了解，您也可以通过以下链接快速学习和探索\n[快速上手案例](https://docs.serverless-devs.com/serverless-devs/quick_start#%E4%B8%8A%E6%89%8B%E4%BD%93%E9%AA%8C)\n[Serverless 应用介绍](http://www.devsapp.cn/application.html)\n[Serverless Devs Yaml规范](https://docs.serverless-devs.com/fc/yaml/readme)\n[Yaml继承和多环境实战](https://docs.serverless-devs.com/serverless-devs/extend)\n[与常见的CI/CD平台集成](https://docs.serverless-devs.com/serverless-devs/cicd)"
+        "contents": "%vscode.dev.docs.welcome.contents%"
       },
       {
         "view": "learn-more",
-        "contents": "您在使用当前工具的时候，遇到任何问题都可以在[Github Issues](https://github.com/Serverless-Devs/Serverless-Devs/issues)上面找到我们，也欢迎您和我们一起共建该项目。\n[访问代码仓库](https://github.com/Serverless-Devs/Serverless-Devs)"
+        "contents": "%vscode.learn.more.welcome.contents%"
       },
       {
         "view": "local-resource",
-        "contents": "您正确安装了serverless-devs命令行工具吗？该部分的功能依赖此工具，建议您安装后体验。\n[立即安装](command:serverless-devs.install)\n如果您以安装仍然出现此提示，说明该目录并不存在s.yaml文件"
+        "contents": "%vscode.local.resource..welcome.contents%"
       }
     ],
     "commands": [
       {
-        "command": "hello-world.showHelloWorld",
-        "title": "Hello World (React + CRA): Show"
-      },
-      {
-        "command": "create.pick",
-        "title": "Choose how to create app"
+        "command": "createApp",
+        "title": "Create Serverless Devs Application"
       },
       {
         "command": "serverless-devs.access",
@@ -93,7 +89,7 @@
       },
       {
         "command": "serverless-devs.set",
-        "title": "设置",
+        "title": "Set up",
         "category": "Serverless-Devs",
         "icon": {
           "light": "media/light/set.svg",
@@ -129,7 +125,7 @@
       },
       {
         "command": "local-resource.set",
-        "title": "设置",
+        "title": "Set up",
         "category": "Serverless-Devs",
         "icon": {
           "light": "media/light/set.svg",
@@ -173,7 +169,7 @@
       },
       {
         "command": "serverless-devs.home",
-        "title": "Serverless Devs首页",
+        "title": "Serverless Devs Home",
         "category": "Serverless-Devs",
         "icon": {
           "light": "media/light/home.svg",
@@ -182,7 +178,7 @@
       },
       {
         "command": "serverless-devs.registry",
-        "title": "Serverless Registry 首页",
+        "title": "Serverless Registry Home",
         "category": "Serverless-Devs",
         "icon": {
           "light": "media/light/registry.svg",
@@ -200,7 +196,7 @@
       },
       {
         "command": "serverless-devs.group",
-        "title": "钉钉群/社区",
+        "title": "DingTalk group/community",
         "category": "Serverless-Devs",
         "icon": {
           "light": "media/light/group.svg",
@@ -218,7 +214,7 @@
       },
       {
         "command": "serverless-devs.yaml",
-        "title": "添加到工作空间",
+        "title": "Add to workspace",
         "category": "Serverless-Devs"
       }
     ],
