--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
 	  "sourceMap": true,
 	  "rootDir": "src",
 	  "strict": true,
-	  "noImplicitAny": false
+	  "noImplicitAny": false,
+	  "esModuleInterop": true
 	},
 	"exclude": ["node_modules", ".vscode-test", "webview-ui"]
   }
