feat: vscode intl
Signed-off-by: xsahxl <xsahxl@126.com>

--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
       },
       {
         "view": "local-resource",
-        "contents": "%vscode.local.resource..welcome.contents%"
+        "contents": "%vscode.local.resource.welcome.contents%"
       }
     ],
     "commands": [
