--- a/package.json
+++ b/package.json
@@ -330,6 +330,7 @@
   },
   "dependencies": {
     "@serverless-devs/core": "^0.1.57-beta.5",
+    "axios": "^1.3.5",
     "command-exists": "^1.2.9",
     "globby": "^11.1.0",
     "open": "^8.4.0",
