--- a/package.json
+++ b/package.json
@@ -314,6 +314,7 @@
     "format-check": "prettier --check src/**/*.ts"
   },
   "devDependencies": {
+    "@types/command-exists": "^1.2.0",
     "@types/glob": "^7.2.0",
     "@types/lodash": "^4.14.182",
     "@types/mocha": "^9.1.0",
